[gd_scene load_steps=7 format=3 uid="uid://bsdo73eg81vxy"]

[ext_resource type="Script" uid="uid://cmyopd1uhj7fc" path="res://scene-scripts/main_scene.gd" id="1_8alcj"]
[ext_resource type="Script" uid="uid://dwrk5n0nom36u" path="res://resoures/grid_config.gd" id="2_7ykc4"]
[ext_resource type="PackedScene" uid="uid://brq8c0vd67rjx" path="res://scenes/grid_manager.tscn" id="2_pw63i"]
[ext_resource type="PackedScene" uid="uid://bwg18nvv3smwp" path="res://scenes/grid_cell.tscn" id="4_pu3yx"]
[ext_resource type="PackedScene" uid="uid://rd3eckbgwirv" path="res://scenes/player.tscn" id="5_gubc5"]

[sub_resource type="Resource" id="Resource_pu3yx"]
script = ExtResource("2_7ykc4")
grid_size = Vector2i(100, 100)
cell_size = Vector2(16, 16)
scale_mode = 0
metadata/_custom_type_script = "uid://dwrk5n0nom36u"

[node name="MainScene" type="Node2D"]
script = ExtResource("1_8alcj")
grid_config = SubResource("Resource_pu3yx")
cell_scene = ExtResource("4_pu3yx")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(-0.5, -0.5)

[node name="GridManager" parent="." instance=ExtResource("2_pw63i")]

[node name="GridCell" parent="." instance=ExtResource("4_pu3yx")]

[node name="Player" parent="." instance=ExtResource("5_gubc5")]
